--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,24 @@
 attrs==25.3.0
+bcrypt==4.3.0
 certifi==2025.1.31
 cffi==1.17.1
+charset-normalizer==3.4.2
+cryptography==44.0.3
 dnspython==2.7.0
 exceptiongroup==1.2.2
 h11==0.14.0
 idna==3.10
 mysql-connector-python==9.2.0
 outcome==1.3.0.post0
+paramiko==3.5.1
 pycparser==2.22
 pymongo==4.12.0
+PyNaCl==1.5.0
 PySide6==6.8.2.1
 PySide6_Addons==6.8.2.1
 PySide6_Essentials==6.8.2.1
 PySocks==1.7.1
+requests==2.32.3
 selenium==4.30.0
 shiboken6==6.8.2.1
 sniffio==1.3.1
