ci: 修复 CI 环境下 pytest 找不到模块的问题

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,9 +39,12 @@ jobs:
       run: |
         mypy core tests --ignore-missing-imports || true
 
-    - name: Run Tests with Pytest
-      # 运行单元测试 (底线)
-      env:
-        PYTHONPATH: .
-      run: |
-        pytest -v tests/unit/
+        - name: Run Tests with Pytest
+
+          # 运行单元测试 (核心底线)
+
+          run: |
+
+            python -m pytest -v tests/unit/
+
+    
