--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,18 @@
-attrs==25.3.0
-bcrypt==4.3.0
-certifi==2025.1.31
-cffi==1.17.1
-charset-normalizer==3.4.2
-cryptography==44.0.3
-dnspython==2.7.0
-exceptiongroup==1.2.2
-h11==0.14.0
-idna==3.10
+# Core Logic & Async
 mysql-connector-python==9.2.0
-outcome==1.3.0.post0
-paramiko==3.5.1
-pycparser==2.22
-pymongo==4.12.0
-PyNaCl==1.5.0
-PySide6==6.8.2.1
-PySide6_Addons==6.8.2.1
-PySide6_Essentials==6.8.2.1
-PySocks==1.7.1
-requests==2.32.3
-selenium==4.30.0
-shiboken6==6.8.2.1
-sniffio==1.3.1
-sortedcontainers==2.4.0
 trio==0.29.0
 trio-websocket==0.12.2
-typing_extensions==4.12.2
-urllib3==2.3.0
-websocket-client==1.8.0
-wsproto==1.2.0
+attrs==25.3.0
+sortedcontainers==2.4.0
+
+# UI Framework (V2)
+nicegui==2.12.1
+
+# Data Persistence & Analysis
+aiosqlite==0.21.0
+pandas==2.2.3
+plotly==6.0.0
+
+# Testing
+pytest==9.0.2
+pytest-trio==0.8.0
